--- a/header.html
+++ b/header.html
@@ -1,24 +1,30 @@
-<div class="header-row">
-  <div>
-    <h1 id="page-title">797 Distillery</h1>
-    <div id="page-subheading" class="subheading"></div>
+<!-- ==============================
+     GLOBAL HEADER – LOCKED VERSION
+     ============================== -->
+
+<div class="header-container">
+  <div class="header-row">
+    <div class="header-titles">
+      <h1 id="page-title">797 Distillery</h1>
+      <div id="page-subheading" class="subheading"></div>
+    </div>
+
+    <a href="index.html" class="header-logo-link">
+      <img
+        src="websiteLogoGlassWhiteTrans.png"
+        class="header-logo"
+        alt="797 Distillery Dashboard"
+      />
+    </a>
   </div>
 
-  <a href="index.html">
-    <img
-      src="websiteLogoGlassWhiteTrans.png"
-      class="header-logo"
-      alt="797 Distillery Dashboard"
-    />
-  </a>
-</div>
+  <div class="dashboard-actions">
+    <a href="barrel-entry-test.html" class="action-btn">
+      ➕ New Barrel Entry
+    </a>
 
-<div class="dashboard-actions">
-  <a href="barrel-entry-test.html" class="action-btn">
-    ➕ New Barrel Entry
-  </a>
-
-  <a href="dashboard.html" class="action-btn secondary">
-    🧪 Fermentation Dashboard
-  </a>
+    <a href="dashboard.html" class="action-btn secondary">
+      🧪 Fermentation Dashboard
+    </a>
+  </div>
 </div>
