--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <!-- ==============================
-     GLOBAL HEADER – LOCKED VERSION
+     GLOBAL HEADER – LOCKED
      ============================== -->
 
 <div class="header-container">
@@ -25,6 +25,10 @@
 
     <a href="dashboard.html" class="action-btn secondary">
       🧪 Fermentation Dashboard
+    </a>
+
+    <a href="print-label.html" class="action-btn secondary">
+      🏷️ Print Barrel Label
     </a>
   </div>
 </div>
