--- a/print-label.html
+++ b/print-label.html
@@ -6,15 +6,18 @@
 
 <title>797 Distillery – Print Barrel Label</title>
 
-<!-- VERSION (bump this when you change layout) -->
-<meta name="app-version" content="Print Label v1.8.0">
+<!-- APP VERSION -->
+<meta name="app-version" content="Print Label v1.8.1">
+
+<!-- Header CSS (GLOBAL, SHARED) -->
+<link rel="stylesheet" href="header.css?v=1.0.0">
 
 <!-- QR Code -->
 <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 
 <style>
 /* =========================
-   GLOBAL
+   PAGE GLOBAL
    ========================= */
 :root{
   --bg:#0f172a;
@@ -28,25 +31,13 @@ body{
   margin:0;
   background:var(--bg);
   color:var(--text);
-  font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
 }
 
 .container{
   max-width:1100px;
   margin:0 auto;
   padding:16px;
-}
-
-/* =========================
-   HEADER (SHARED)
-   ========================= */
-#headerMount{
-  margin-bottom:10px;
-}
-
-/* hide header when printing ONLY */
-@media print{
-  #headerMount{display:none!important;}
 }
 
 /* =========================
@@ -95,7 +86,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
   color:#000;
   padding:18px;
   box-sizing:border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:Arial,Helvetica,sans-serif;
   display:none;
 }
 
@@ -107,9 +98,9 @@ button:disabled{opacity:.5;cursor:not-allowed}
 }
 
 .lbl-r{
-  font-size:96px;
+  font-size:104px;
   font-weight:900;
-  line-height:1;
+  line-height:0.95;
 }
 
 .lbl-title{
@@ -124,18 +115,18 @@ button:disabled{opacity:.5;cursor:not-allowed}
 
 .lbl-rule{
   border-top:3px solid #000;
-  margin:10px 0;
+  margin:8px 0;
 }
 
 /* DATA */
 .lbl-data{
-  font-size:15px;
-  line-height:1.6;
+  font-size:16px;
+  line-height:1.55;
 }
 
 .lbl-data span{
   display:inline-block;
-  width:190px;
+  width:200px;
   font-weight:900;
 }
 
@@ -145,17 +136,17 @@ button:disabled{opacity:.5;cursor:not-allowed}
 }
 
 .crest-img{
-  height:230px;
+  height:240px;
   width:auto;
   max-width:100%;
   display:block;
-  margin:6px auto;
+  margin:4px auto;
 }
 
 /* BARREL */
 .lbl-barrel{
   text-align:center;
-  font-size:28px;
+  font-size:30px;
   font-weight:900;
 }
 
@@ -191,15 +182,13 @@ button:disabled{opacity:.5;cursor:not-allowed}
 <body>
 <div class="container">
 
-  <!-- Shared header -->
+  <!-- GLOBAL HEADER -->
   <div id="headerMount" class="no-print"></div>
 
-  <!-- Version -->
-  <div class="version-badge no-print">
-    Print Label v1.8.0
-  </div>
+  <!-- VERSION -->
+  <div id="versionBadge" class="version-badge no-print"></div>
 
-  <!-- Controls -->
+  <!-- CONTROLS -->
   <div class="controls no-print">
     <select id="barrelSelect">
       <option>Loading barrels…</option>
@@ -213,7 +202,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
   <div id="label" class="label">
 
     <div class="lbl-header">
-      <div class="lbl-r">R</div>
+      <div id="lblSpiritLetter" class="lbl-r">R</div>
       <div>
         <div class="lbl-title">797 Distillery LLC</div>
         <div>425 E Pleasant Ave</div>
@@ -257,15 +246,16 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script>
+const APP_VERSION = "Print Label v1.8.1";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
+versionBadge.textContent = APP_VERSION;
+
 /* Header */
 async function loadHeader(){
-  try{
-    const r=await fetch("header.html",{cache:"no-store"});
-    document.getElementById("headerMount").innerHTML=await r.text();
-  }catch(e){}
+  const r = await fetch("header.html", { cache: "no-store" });
+  headerMount.innerHTML = await r.text();
 }
 
 /* CSV */
@@ -294,6 +284,14 @@ function makeQR(url){
   if(url)new QRCode("qrcode",{text:url,width:150,height:150});
 }
 
+function setSpiritLetter(type){
+  const t = (type||"").toLowerCase();
+  lblSpiritLetter.textContent =
+    t.includes("rum") ? "R" :
+    t.includes("whiskey") ? "W" :
+    t.includes("vodka") ? "V" : "S";
+}
+
 function fillLabel(o){
   vBarrelNo.textContent=o["Barrel No."];
   vFillDate.textContent=o["Fill Date"];
@@ -304,6 +302,7 @@ function fillLabel(o){
   vRCG.textContent=o["RC-G"];
   vOPG.textContent=o["OPG"];
   vBarrelType.textContent=o["Barrel Type"];
+  setSpiritLetter(o["Spirit Type"]);
   makeQR(o["Barrel Doc Link"]);
   label.style.display="block";
   btnPrint.disabled=false;
