--- a/print-label.html
+++ b/print-label.html
@@ -64,13 +64,26 @@ body{
   margin-bottom:14px;
 }
 
-select,button{
-  padding:10px 14px;
-  border-radius:10px;
-  border:1px solid var(--border);
-  background:#0b1222;
-  color:var(--text);
-  font-weight:800;
+select,
+button{
+  padding: 10px 14px;
+  border-radius: 10px;
+  border: 1px solid var(--border);
+  background: #0b1222;
+  color: var(--text);
+
+  /* 🔑 FIX */
+  font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+
+  line-height: 1.2;
+  appearance: none;
+  -webkit-appearance: none;
+}
+select option{
+  font-size: 15px;
+  font-weight: 700;
 }
 
 button{cursor:pointer}
